--- a/templates/chrony.conf.erb
+++ b/templates/chrony.conf.erb
@@ -1,9 +1,7 @@
 # Use public servers from the pool.ntp.org project.
 # Please consider joining the pool (http://www.pool.ntp.org/join.html).
 <%# configuration effectue par Puppet Hiera %>	
-server1  	<%= scope['servers'] %>
-server2 		<%= @servers %>
-server3	 <%= scope.lookupvar('::server') %>
+server  	<%= scope['servers'] %>
 
 # Ignore stratum in source selection.
 stratumweight 0
@@ -19,7 +17,7 @@ rtcsync
 makestep 10 3
 
 # Allow NTP client access from local network.
-allow 192.168/16
+allow <%= scope['allow'] %>
 
 # Listen for commands only on localhost.
 bindcmdaddress 127.0.0.1
