--- a/templates/network/hosts.erb
+++ b/templates/network/hosts.erb
@@ -4,3 +4,4 @@
 <%= scope.lookupvar('::ipaddress_eth0') %> 	<%= scope.lookupvar('::hostname') %>.<%= scope.lookupvar('::domain') %>  <%= scope.lookupvar('::hostname') %>
 
 
+<%= scope.lookupvar('::list_host') %>
