--- a/templates/network/network.erb
+++ b/templates/network/network.erb
@@ -2,4 +2,4 @@ NETWORKING=<%= scope['network_networking'] %>
 HOSTNAME=<%= scope.lookupvar('::hostname') %>
 NM_BOND_VLAN_ENABLED=<%= scope['network_nm'] %>
 NOZEROCONF=<%= scope['network_nozeroconf'] %>
-GATEWAYDEV=<%= scope['network_gateway'] %>
+#GATEWAYDEV=<%= scope['network_gateway'] %>
