--- a/templates/network/ifcfg-eth1.erb
+++ b/templates/network/ifcfg-eth1.erb
@@ -1,9 +1,10 @@
-DEVICE=eth1
+DEVICE=<%= scope['ifcfg_device2'] %>
+NAME=<%= scope['ifcfg_name2'] %>
 TYPE=Ethernet
 HOTPLUG=yes
 ONBOOT=yes
 NM_CONTROLLED=no
-HWADDR=<%= scope.lookupvar('::macaddress_eth1') %>
-BOOTPROTO=dhcp
+#HWADDR=<%= scope['::macaddress_eth1'] %>
+BOOTPROTO=none
 PEERDNS=no
 IPV6INIT=no
