--- a/templates/network/networks.erb
+++ b/templates/network/networks.erb
@@ -2,3 +2,6 @@
 default 				0.0.0.0
 loopback 				127.0.0.0
 link-local 				169.254.0.0
+<% scope['list_networks'].each do |list_networks| -%>
+<%= list_networks %>
+<% end -%>
