--- a/templates/network/resolv.erb
+++ b/templates/network/resolv.erb
@@ -1,3 +1,3 @@
-search <%= scope.lookupvar('::domain') %> 
-nameserver <%= scope.lookupvar('::nameserver') %> 
+search <%= scope['::domain'] %> 
+nameserver <%= scope['resolv_nameserver'] %>
 
