Installation du Dashboard OpenStack

--- a/templates/network/ifcfg-ens9.erb
+++ b/templates/network/ifcfg-ens9.erb
@@ -4,7 +4,7 @@ TYPE=Ethernet
 HOTPLUG=yes
 ONBOOT=yes
 NM_CONTROLLED=no
-#HWADDR=<%= scope['::macaddress_eth1'] %>
+#HWADDR=<%= scope['::macaddress_ens9'] %>
 BOOTPROTO=none
 PEERDNS=no
 IPV6INIT=no
