--- a/templates/maria/openstack.cnf.erb
+++ b/templates/maria/openstack.cnf.erb
@@ -1,5 +1,5 @@
 [mysqld]
-bind-address = <%= scope['::hostname'] %>
+bind-address = <%= scope['maria_bind_address'] %>
 default-storage-engine = innodb
 innodb_file_per_table
 max_connections = 4096
