--- a/templates/network/ifcfg-eth1.erb
+++ b/templates/network/ifcfg-eth1.erb
@@ -1,10 +1,6 @@
 DEVICE=<%= scope['ifcfg_device2'] %>
-NAME=<%= scope['ifcfg_name2'] %>
+#NAME=<%= scope['ifcfg_name2'] %>
 TYPE=Ethernet
-HOTPLUG=yes
 ONBOOT=yes
-NM_CONTROLLED=no
 #HWADDR=<%= scope['::macaddress_ens9'] %>
 BOOTPROTO=none
-PEERDNS=no
-IPV6INIT=no
