--- a/templates/network/sysctl.erb
+++ b/templates/network/sysctl.erb
@@ -1,5 +1,5 @@
 # Controls IP packet forwarding
-net.ipv4.ip_forward = 1
+#net.ipv4.ip_forward = 1
 
 #Desactive ipv6
 net.ipv6.conf.all.disable_ipv6=1
